@@ -1,4 +1,7 @@
 2012-02-25 arnaud.fontaine
+* Rename Component modified transition to modify as per naming conventions.
+
+2012-02-25 arnaud.fontaine
 * Merge component_interaction_workflow into dynamic_class_generation_interaction_workflow.
 
 2012-02-25 arnaud.fontaine
